; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_widl.c_set_everything.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_widl.c_set_everything.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@do_header = common dso_local global i32 0, align 4
@do_typelib = common dso_local global i32 0, align 4
@do_old_typelib = common dso_local global i32 0, align 4
@do_proxies = common dso_local global i32 0, align 4
@do_client = common dso_local global i32 0, align 4
@do_server = common dso_local global i32 0, align 4
@do_regscript = common dso_local global i32 0, align 4
@do_idfile = common dso_local global i32 0, align 4
@do_dlldata = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_everything to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_everything(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @do_header, align 4
  %4 = load i32, i32* %2, align 4
  store i32 %4, i32* @do_typelib, align 4
  %5 = load i32, i32* %2, align 4
  store i32 %5, i32* @do_old_typelib, align 4
  %6 = load i32, i32* %2, align 4
  store i32 %6, i32* @do_proxies, align 4
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* @do_client, align 4
  %8 = load i32, i32* %2, align 4
  store i32 %8, i32* @do_server, align 4
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* @do_regscript, align 4
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* @do_idfile, align 4
  %11 = load i32, i32* %2, align 4
  store i32 %11, i32* @do_dlldata, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
